--- a/take-out-server/pom.xml
+++ b/take-out-server/pom.xml
@@ -74,6 +74,12 @@
             <artifactId>springfox-boot-starter</artifactId>
             <version>3.0.0</version>
         </dependency>
+<!--        用于生成随机数 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.11</version>
+        </dependency>
 <!--        swagger-->
     </dependencies>
 
