--- a/take-out-server/pom.xml
+++ b/take-out-server/pom.xml
@@ -81,6 +81,11 @@
             <version>5.8.11</version>
         </dependency>
 <!--        swagger-->
+<!--        mail -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
