--- a/take-out-web/package.json
+++ b/take-out-web/package.json
@@ -1,13 +1,32 @@
 {
+  "name": "take-out-web",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@types/node": "^18.15.11",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vueuse/core": "^9.13.0",
+    "axios": "^1.3.5",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "pinia": "^2.0.34",
+    "tailwindcss": "^3.3.1",
+    "vant": "^4.2.0",
+    "vconsole": "^3.15.0",
+    "vue": "^3.2.47",
+    "vue-router": "4"
   },
   "devDependencies": {
-    "nuxt": "^3.3.1"
+    "@vitejs/plugin-vue": "^4.1.0",
+    "typescript": "^4.9.3",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.2.0",
+    "vue-tsc": "^1.2.0"
   }
 }
