--- a/take-out-web/package.json
+++ b/take-out-web/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^18.15.11",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vueuse/core": "^9.13.0",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.3.5",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "pinia": "^2.0.34",
+    "postcss": "^8.4.22",
     "tailwindcss": "^3.3.1",
     "vant": "^4.2.0",
     "vconsole": "^3.15.0",
