--- a/take-out-server/src/main/resources/application.yml
+++ b/take-out-server/src/main/resources/application.yml
@@ -12,11 +12,11 @@ spring:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/reggie?serverTimezone=Asia/Shanghai&useUnicode=t rue&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
-      password: 123456789
+      password: Ll123456.
   redis:
-    host: 49.235.70.200
+    host: 127.0.0.1
     port: 6379
-    password: yukiice123
+    password: 123456
     database: 0
 mybatis-plus:
   configuration:
@@ -27,4 +27,4 @@ mybatis-plus:
     db-config:
       id-type: ASSIGN_ID
 reggie:
-  path: /Users/yukiice/Documents/upload/reggie/
+  path: /mnt/reggie/
